<?xml version="1.0" encoding="utf-8"?>
<androidx.percentlayout.widget.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:padding="2dp">
    <RelativeLayout
        android:id="@+id/toWareHouseTitleLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/fragmentTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_centerInParent="true"
            android:text="@string/toWareHouseTitle"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"/>
    </RelativeLayout>
    <androidx.percentlayout.widget.PercentRelativeLayout
        android:id="@+id/toWareHouseManagerLay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@+id/toWareHouseTitleLay"
        app:layout_widthPercent="100%"
        app:layout_heightPercent="100%"
        android:layout_marginTop="2dp"
        android:background="@drawable/lay_md_amber_50">
        <RelativeLayout
            android:id="@+id/scanBtnView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">
            <Button
                android:id="@+id/scanBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/scanLabel"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/baseInfoView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/scanBtnView"
            android:layout_marginTop="1dp"
            android:background="@drawable/btn_base_normal"
            android:gravity="center_horizontal">

            <LinearLayout
                android:id="@+id/codeParentLay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UselessParent">
                <TextView
                    android:id="@+id/codeViewLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/codeViewLabel"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:text="YP1001"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/nameParentLay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/codeParentLay"
                tools:ignore="UselessParent">
                <TextView
                    android:id="@+id/nameViewLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/nameViewLabel"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:text="测试药剂1"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/batchParentLay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/nameParentLay"
                tools:ignore="UselessParent">
                <TextView
                    android:id="@+id/batchViewLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/batchViewLabel"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:text="1001"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/createTimeParentLay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/batchParentLay"
                tools:ignore="UselessParent">
                <TextView
                    android:id="@+id/createTimeViewLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/createTimeViewLabel"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:text="2024-10-16"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/priceParentLay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/createTimeParentLay"
                tools:ignore="UselessParent">
                <TextView
                    android:id="@+id/priceViewLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/priceViewLabel"/>
                <TextView
                    android:layout_width="78dp"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:text="20.00"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/retailParentLay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/priceParentLay"
                tools:ignore="UselessParent">
                <TextView
                    android:id="@+id/retailViewLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/retailViewLabel"/>
                <EditText
                    android:layout_width="78dp"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="20.00"
                    android:textSize="20sp"
                    style="@style/EditTextNoUnderline"/>
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/toWareHouseBtnView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/baseInfoView"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/toWareHouseBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toWareHouseBtn"
                android:layout_centerInParent="true"
                android:orientation="horizontal"/>
        </RelativeLayout>
    </androidx.percentlayout.widget.PercentRelativeLayout>
</androidx.percentlayout.widget.PercentRelativeLayout>