<androidx.percentlayout.widget.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:padding="2dp">
    <RelativeLayout
        android:id="@+id/toWareHouseTitleLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/fragmentTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_centerInParent="true"
            android:text="@string/toWareHouseTitle"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"/>
    </RelativeLayout>
    <androidx.percentlayout.widget.PercentRelativeLayout
        android:id="@+id/wareHouseScanLay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@+id/toWareHouseTitleLay"
        app:layout_widthPercent="100%"
        app:layout_heightPercent="100%"
        android:layout_marginTop="2dp"
        android:background="@drawable/lay_md_amber_50">
        <RelativeLayout
            android:id="@+id/scanBtnView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">
            <Button
                android:id="@+id/scanBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/scanLabel"/>
        </RelativeLayout>
        <!--子视图-->
        <androidx.percentlayout.widget.PercentRelativeLayout
            android:id="@+id/wareHouseManagerLay"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_below="@+id/scanBtnView"
            app:layout_widthPercent="100%"
            app:layout_heightPercent="100%"
            android:layout_marginTop="2dp"
            android:background="@drawable/lay_md_amber_50">
            <RelativeLayout
                android:id="@+id/baseInfoView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/scanBtnView"
                android:layout_marginTop="1dp"
                android:background="@drawable/btn_base_normal"
                android:gravity="center_horizontal">

                <LinearLayout
                    android:id="@+id/codeParentLay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:ignore="UselessParent">
                    <TextView
                        android:id="@+id/codeViewLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/codeViewLabel"/>
                    <TextView
                        android:id="@+id/codeText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:text="YP1001"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/nameParentLay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_below="@+id/codeParentLay"
                    tools:ignore="UselessParent">
                    <TextView
                        android:id="@+id/nameViewLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/nameViewLabel"/>
                    <TextView
                        android:id="@+id/nameText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:text="测试药剂1"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/batchParentLay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_below="@+id/nameParentLay"
                    tools:ignore="UselessParent">
                    <TextView
                        android:id="@+id/batchViewLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/batchViewLabel"/>
                    <TextView
                        android:id="@+id/batchText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:text="1001"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/createTimeParentLay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_below="@+id/batchParentLay"
                    tools:ignore="UselessParent">
                    <TextView
                        android:id="@+id/createTimeViewLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/createTimeViewLabel"/>
                    <TextView
                        android:id="@+id/createTimeText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:text="2024-10-16"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/priceParentLay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_below="@+id/createTimeParentLay"
                    tools:ignore="UselessParent">
                    <TextView
                        android:id="@+id/priceViewLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/priceViewLabel"/>
                    <TextView
                        android:id="@+id/priceText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:text="20.00"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/retailParentLay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_below="@+id/priceParentLay"
                    tools:ignore="UselessParent">
                    <TextView
                        android:id="@+id/retailViewLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/retailViewLabel"/>
                    <TextView
                        android:id="@+id/retailText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="20.00"
                        android:textSize="20sp"
                        style="@style/EditTextNoUnderline"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/countParentLay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_below="@+id/retailParentLay"
                    tools:ignore="UselessParent">
                    <TextView
                        android:id="@+id/countViewLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/toHouseCountViewLabel"/>
                    <EditText
                        android:id="@+id/countText"
                        android:layout_width="64dp"
                        android:layout_height="28dp"
                        android:textStyle="bold"
                        android:text="20"
                        android:textSize="20sp"
                        android:singleLine="true"
                        style="@style/EditTextNoUnderline"/>
                </LinearLayout>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/wareHouseBtnView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/baseInfoView"
                tools:ignore="UselessParent">

                <Button
                    android:id="@+id/wareHouseBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/toWareHouseBtn"
                    android:layout_centerInParent="true"
                    android:orientation="horizontal"/>
            </RelativeLayout>
        </androidx.percentlayout.widget.PercentRelativeLayout>

        <androidx.percentlayout.widget.PercentRelativeLayout
            android:id="@+id/orderManagerLay"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_below="@+id/scanBtnView"
            app:layout_widthPercent="100%"
            app:layout_heightPercent="100%"
            android:layout_marginTop="2dp"
            android:background="@drawable/lay_md_amber_50">

            <androidx.percentlayout.widget.PercentRelativeLayout
                android:id="@+id/itemLay"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_below="@+id/scanBtnView"
                app:layout_widthPercent="100%"
                app:layout_heightPercent="50%"
                android:layout_marginTop="2dp"
                android:background="@drawable/lay_md_amber_50">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/orderListView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:divider="@android:color/transparent"
                    android:dividerHeight="4dp" />
            </androidx.percentlayout.widget.PercentRelativeLayout>
            <RelativeLayout
                android:layout_below="@+id/itemLay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <Button
                    android:id="@+id/settleBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@id/cancelBtn"
                    android:layout_marginEnd="6dp"
                    android:text="@string/settleBtn"/>
                <Button
                    android:id="@+id/cancelBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="2dp"
                    android:text="@string/cancelBtn"/>
            </RelativeLayout>
        </androidx.percentlayout.widget.PercentRelativeLayout>
    </androidx.percentlayout.widget.PercentRelativeLayout>
</androidx.percentlayout.widget.PercentRelativeLayout>